--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "demo1",
+  "name": "electron-quick-start",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A minimal Electron application",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": "https://github.com/electron/electron-quick-start",
+  "keywords": [
+    "Electron",
+    "quick",
+    "start",
+    "tutorial",
+    "demo"
+  ],
+  "author": "GitHub",
+  "license": "CC0-1.0",
+  "devDependencies": {},
   "dependencies": {
-    "electron": "^11.3.0"
-  },
-  "devDependencies": {
-    "electron": "^11.3.0"
+    "electron": "^11.3.0",
+    "timer.js": "^1.0.4"
   }
 }
